<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/daytimeBackground"
    android:orientation="vertical"
    app:layout_constraintHorizontal_weight="1"

    tools:context=".view.activities.MainActivity">

    <TextView
        android:id="@+id/no_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_regular"
        android:text="NO EVENTS \nTO DISPLAY"
        android:textSize="30dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.MainHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frame_day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/left_button"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/day_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="11dp"
                android:elevation="17dp"
                android:fontFamily="@font/oswald_regular"
                android:text="05"
                android:textColor="@android:color/white"
                android:textSize="27sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:elevation="16dp"
                android:text="TODAY"
                android:fontFamily="@font/oswald_regular"
                android:textColor="@android:color/white"
                android:textSize="9sp"
                android:background="@android:color/transparent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/today_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/logoBackgroundHeader"
                android:outlineSpotShadowColor="@android:color/transparent"/>

        </FrameLayout>

        <Button
            android:id="@+id/left_button"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_chevron_left"
            app:layout_constraintLeft_toRightOf="@id/frame_day_button"
            app:layout_constraintRight_toLeftOf="@id/header_date" />

        <EditText
            android:id="@+id/header_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:focusable="false"
            android:fontFamily="@font/oswald_regular"
            android:inputType="none"
            android:text="TO/DA/YY"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:layout_constraintHeight_percent=".7"
            app:layout_constraintLeft_toRightOf="@id/left_button"
            app:layout_constraintRight_toLeftOf="@id/right_button" />

        <Button
            android:id="@+id/right_button"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_chevron_right"
            app:layout_constraintLeft_toRightOf="@id/header_date"
            app:layout_constraintRight_toLeftOf="@id/frame_add_button" />

        <EditText
            android:id="@+id/day_of_the_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:fontFamily="@font/oswald_light"
            android:inputType="none"
            android:text="DAY"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="10dp"/>

        <FrameLayout
            android:id="@+id/frame_add_button"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/right_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="20dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_add_event"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/logoBackgroundHeader"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:outlineSpotShadowColor="@android:color/transparent"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/image_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_add"
                android:background="@android:color/transparent"
                android:elevation="17dp"/>

        </FrameLayout>


    </eu.marcellofabbri.dailyroadmap.view.activityHelpers.MainHeader>

    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
        android:id="@+id/eventPainterContainerFibonacci"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RelativeLayout
        android:id="@+id/alternativeDeleteButton"
        app:layout_constraintTop_toTopOf="@+id/central_container"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/central_container"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:elevation="1dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="210dp"
            android:layout_height="300dp"
            android:background="@android:color/transparent"
            tools:listitem="@layout/event_item"
            android:requiresFadingEdge="vertical"
            android:outlineAmbientShadowColor="@color/daytimeBackground"/>

        <androidx.cardview.widget.CardView
            android:layout_gravity="bottom"
            android:id="@+id/my_buttons_cardview"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="35dp">

            <FrameLayout
                android:id="@+id/frame_trash_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:elevation="18dp"
                    android:text="ALL"
                    android:fontFamily="@font/oswald_medium"
                    android:textColor="@color/logoBackgroundHeader"
                    android:textSize="9sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/image_trash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_medium_trash"
                    android:background="@android:color/transparent"
                    android:elevation="17dp"
                    android:scaleType="fitXY" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/button_delete_today_events"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/logoBackgroundHeader"
                    android:outlineSpotShadowColor="@android:color/transparent"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_trash_button_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
        android:id="@+id/eventPainterContainerRectangular"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent=".80"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>